[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonfi"
version = "0.12"
description = "Async Python SDK for StonFi DEX"
authors = [
    {name = "Nikita Ugnich", email = "nikitagavrilin005@gmail.com"},
    {name = "Dmitry Neutron"},
    {name = "Ivan Platonov"}
]
dependencies = [
    "pytoniq",
    "aiohttp",
    "async-lru",
    "dataclasses-json"
]
readme = "README.md"
classifiers = ["Development Status :: 4 - Beta",
              "Intended Audience :: Developers",
              "Programming Language :: Python :: 3.10",
              "Programming Language :: Python :: 3.11",
              "Programming Language :: Python :: 3.12",
              "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
              "Topic :: Software Development :: Libraries",
              "Topic :: Software Development :: Libraries :: Python Modules",
              "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/lapismyt/ston-fi.py"
